Added windows milestone v5.0